--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ body {
     font-weight: 400;
     font-size: 25px;
     align-items: end;
-    margin-bottom: -100px;
 }
 
 .hand {
@@ -80,13 +79,12 @@ body {
     font-family: "VT323", monospace;
     font-weight: 400;
     font-size: 25px;
-    margin-top: 50px;
+    margin-top: 100px;
     overflow: visible; /* Allow overflow to show */
-    border: 1px solid red; /* For debugging */
 }
 
 .game-layout-container {
-    min-height: 95vh; /* Allows flexibility */
+    min-height: 99vh; 
     display: flex;
     flex-direction: column;
     align-items: center;
